master

2.43.2
- noface
  Insert Quote Threading from aeosynths tree.

- Mayhem
  The Delete Links in the Menu now have a cooldown.

2.43.1
- Mayhem
  Divide the Delete Link in the Menu into a Post and Image deletion links.
  Add /wsg/ archive redirection.
  Add /fit/ archive redirection.

2.34.0
- Stallmanu
  Sage keybind
- that4chanwolf
  Remove Mayhem's stupidity.
  Redirect /jp/ to fuuka.warosu.org
  Autosage on /jp/ (now an option).
  Improve sage 'consistency'.
- Mayhem
  New feature: Menu, which
    - replaces and includes Report Button and Delete Button.
    - add one-click Filter buttons.
    - add download links to automatically save the file with its original filename. Chrome-only currently.
    - add archive links.
    - can integrate features from external userscripts/extensions, see https://github.com/MayhemYDG/4chan-x/wiki/Menu-API

2.33.8
- Mayhem
  Add Country filtering.

2.33.7
- Mayhem
  Add /ck/ archive redirection.

2.33.6
- Mayhem
  Update/fix archive redirection method.

2.33.5
- Mayhem
  Add /sp/ archive redirection.

2.33.4
- Mayhem
  Fix QR with the new captcha loading method.
  The QR will now work on /f/ too.

2.33.3
- Mayhem
  Revert changes that broke fetchers in Firefox.

2.33.2
- Mayhem
  After 1000+ characters, a character counter will appear in the QR.
  Add /soc/ archive redirection.

2.33.1
- Mayhem
  Add /r9k/ archive redirection.

2.33.0
- btmcsweeney
  Allow users to specify text for sauce links.
- Mayhem
  Dead quotes can now be previewed or inlined with compatible archivers.
  Opera fixes.
  /f/ fixes.

2.32.1
- Mayhem
  Fix images uploaded as spoilers.

2.32.0
- aeosynth
  delete button
- Mayhem
  Fix spoiler/code tag keybinds being ignored on post submission.

2.31.6
- Mayhem
  Update captcha longevity to 5 minutes max, as according to 4chan's change.

2.31.5
- Mayhem
  Fix spoiler and code tag keybinds regression.

2.31.4
- Mayhem
  Add /an/ and /toy/ archive redirection.

2.31.3
- Mayhem